<resources>
    <string name="app_name">MohamadKh-instacleaner</string>
    <string name="go_premium">کاربر ویژه شو!</string>
    <string name="premium_features">\n• دانلود تعداد نامحدود پست‌ها\n• لاگین با چند اکانت\n• افزودن اکانت نامحدود به علاقه‌مندی‌ها\n• ذخیره کردن پست‌ها\n• فالو، آنفالو و بلاک نامحدود اکانت‌ها</string>
    <string name="subscribe_now">کاربر ویژه شو!</string>
    <string name="restore_purchase">بازیابی خرید</string>
    <string name="login">ورود</string>
    <string name="about_instaman">درباره اینستامن</string>
    <string name="connecting">در حال اتصال</string>
    <string name="please_wait">چند لحظه صبر کن . . .</string>
    <string name="filter_options">انتخاب فیلتر</string>
    <string name="public_accounts">اکانت‌های پابلیک</string>
    <string name="private_accounts">اکانت‌های پرایوت</string>
    <string name="accounts_with_profile_picture">اکانت‌های که عکس پروفایل دارند</string>
    <string name="accounts_without_profile_picture">اکانت‌های که عکس پروفایل ندارند</string>
    <string name="verified_accounts">اکانت‌های تایید شده</string>
    <string name="not_verified_accounts">اکانت‌های تایید نشده</string>
    <string name="selected_accounts">اکانت‌های انتخاب شده</string>
    <string name="not_selected_accounts">اکانت‌های انتخاب نشده</string>
    <string name="no_filter">بدون فیلتر</string>
    <string name="ok">باشه</string>
    <string name="images">عکس‌ها</string>
    <string name="videos">ویدئوها</string>
    <string name="selected_posts">پست‌های انتخاب شده</string>
    <string name="not_selected_posts">پست‌های انتخاب نشده</string>
    <string name="remove_filter">حذف فیلترها</string>
    <string name="save">ذخیره</string>
    <string name="copy">کپی</string>
    <string name="go_premium_now">همین حالا کاربر ویژه شو!</string>
    <string name="sort_options">انتخاب چیدمان</string>
    <string name="a_to_z">از A به Z</string>
    <string name="z_to_a">از Z به A</string>
    <string name="by_username">بر اساس نام کاربری</string>
    <string name="by_status">بر اساس وضعیت</string>
    <string name="by_profile_picture">بر اساس عکس پروفایل</string>
    <string name="by_selection">بر اساس انتخاب</string>
    <string name="selected_first">اول انتخاب شده‌ها</string>
    <string name="not_selected_first">اول انتخاب نشده‌ها</string>
    <string name="by_date">بر اساس تاریخ</string>
    <string name="by_type">بر اساس نوع</string>
    <string name="by_like_count">بر اساس تعداد لایک</string>
    <string name="by_comment_count">بر اساس تعداد کامنت</string>
    <string name="filter_result">جستجو</string>
    <string name="fetching_followers">در حال دریافت فالوئرها . . .</string>
    <string name="select_action">انتخاب</string>
    <string name="select_action_count">انتخاب (%1$s)</string>
    <string name="no_favorite_user">کسی رو به لیست علاقه‌مندی اضافه نکردی!</string>
    <string name="followers">فالوئر</string>
    <string name="posts">پست</string>
    <string name="followings">فالوئینگ</string>
    <string name="dash">-</string>
    <string name="analyze_my_posts">تحلیل پست‌های من</string>
    <string name="view_my_posts">نمایش پست‌های من</string>
    <string name="share_this_app">به اشتراک گذاشتن برنامه</string>
    <string name="download">دانلود</string>
    <string name="premium">کاربر ویژه</string>
    <string name="settings">تنظیمات</string>
    <string name="contact_us">تماس با ما</string>
    <string name="about_us">درباره ما</string>
    <string name="fetching_posts">در حال دریافت پست‌ها . . .</string>
    <string name="search">جستجو</string>
    <string name="download_path">مسیر دانلود</string>
    <string name="sd_card">مموری کارت</string>
    <string name="internal_storage">حافظه داخلی</string>
    <string name="storage_permission">دسترسی به حافظه</string>
    <string name="allow">اجازه دادن</string>
    <string name="deny">اجازه ندادن</string>
    <string name="favorite">علاقه‌مندی‌ها</string>
    <string name="select">انتخاب</string>
    <string name="sort">چیدمان</string>
    <string name="filter">فیلتر</string>
    <string name="connection_error">خطای اتصال</string>
    <string name="already_signed_with_this_account">قبلا با این اکانت وارد شدی</string>
    <string name="home">خانه</string>
    <string name="follow">فالو</string>
    <string name="more">بیشتر</string>
    <string name="add">اضافه کردن</string>
    <string name="save_image">ذخیره‌ی عکس</string>
    <string name="save_video">ذخیره‌ی ویدئو</string>
    <string name="no_caption">- بدون کپشن -</string>
    <string name="image_saved">عکس ذخیره شد</string>
    <string name="video_saved">ویدئو ذخیره شد</string>
    <string name="storage_permission_denied">دسترسی به حافظه داده نشده.</string>
    <string name="copied_to_clipboard">در کلیپبورد ذخیره شد</string>
    <string name="by_verify">بر اساس وریفای</string>
    <string name="select_all">انتخاب همه</string>
    <string name="deselect_all">انتخاب هیچکدام</string>
    <string name="invert_selection">برعکس کردن انتخاب</string>
    <string name="interval_selection">انتخاب بینابین</string>
    <string name="unfollow">آنفالو</string>
    <string name="remove_follower">حذف فالوئر</string>
    <string name="block">بلاک</string>
    <string name="download_profile_images">دانلود عکس پروفایل</string>
    <string name="premium_action_limit_desc">کاربرهای عادی بیشتر از ۵ آیتم نمیتونن انتخاب کنن. کاربر ویژه شو و از امکانات برنامه لذت ببر!</string>
    <string name="premium_account_limit_desc">کاربرهای عادی نمیتونن بیشتر اکانت اضافه کنن. کاربر ویژه شو و از امکانات برنامه لذت ببر!</string>
    <string name="premium_live_limit_desc">کاربرهای عادی ویدئو‌های لایو رو نمیتونن دانلود کنن. کاربر ویژه شو و از امکانات برنامه لذت ببر!</string>
    <string name="premium_save_post_limit_desc">کاربرهای عادی پست‌ها رو نمیتونن ذخیره کنن. کاربر ویژه شو و از امکانات برنامه لذت ببر!</string>
    <string name="premium_favorite_limit_desc">کاربرهای عادی بیشتر از ۵ کابر نمیتونن به علاقه‌مندی ها اضافه کنن. کاربر ویژه شو و از امکانات برنامه لذت ببر!</string>
    <string name="view_profile">نمایش پروفایل</string>
    <string name="view_image">نمایش عکس</string>
    <string name="goto_instagram">برو به اینستاگرام</string>
    <string name="copy_link">کپی کردن لینک</string>
    <string name="copy_username">کپی کردن نام کاربری</string>
    <string name="completed">انجام شد</string>
    <string name="reached_instagram_limits_will_continue_after_seconds">به محدودیت‌های اینستاگرام خوردیم. بعد از %1$s ثانیه ادامه میدم.</string>
    <string name="following_dot">در حال فالو :</string>
    <string name="unfollowing_dot">در حال آنفالو :</string>
    <string name="blocking_dot">در حال بلاک :‌ </string>
    <string name="downloading_dot">در حال دانلود : </string>
    <string name="removing_followers_dot">در حال حذف فالوئر : </string>
    <string name="no_result">نتیجه‌ای نداشت!</string>
    <string name="saving_percent">در حال ذخیره %1$s %%</string>
    <string name="premium_end_error_favorite">این کاربر رو وقتی کاربر ویژه بودی اضافه کردی. دوباره کاربر ویژه شو و از امکانات برنامه لذت ببر!</string>
    <string name="premium_end_error_account">این کاربر رو وقتی کاربر ویژه بودی اضافه کردی. دوباره کاربر ویژه شو و از امکانات برنامه لذت ببر!</string>
    <string name="no_profile_pic">بدون عکس پروفایل</string>
    <string name="saving">در حال ذخیره . . .</string>
    <string name="no_item_selected">هیچی انتخاب نشده</string>
    <string name="stop">توقف</string>
    <string name="you_have_no_followers">هیچ فالوئری نداری!</string>
    <string name="by_followback">بر اساس فالوبک</string>
    <string name="tap_to_fetch_followers">برای گرفتن فالوئرها اینجا بزن</string>
    <string name="tap_to_fetch_followings">برای گرفتن فالوئینگ‌ها اینجا بزن</string>
    <string name="tap_to_fetch_posts">برای گرفتن پست‌ها اینجا بزن</string>
    <string name="you_need_to_fetch_all_followings_first">باید اول همه‌ی فالوئینگ‌ها رو بگیری</string>
    <string name="you_are_not_following_anyone">هیچکس رو فالو نمیکنی!</string>
    <string name="fetching_followings">در حال دریافت فالوئینگ‌ها . . .</string>
    <string name="you_need_to_fetch_all_followers_first">باید اول همه‌ی فالوئرها رو بگیری</string>
    <string name="view_profile_picture">نمایش عکس پروفایل</string>
    <string name="fetching_username_information">در حال دریافت اطلاعات %1$s</string>
    <string name="yes_logout">آره، خارج شو</string>
    <string name="logout_username">خروج از %1$s؟</string>
    <string name="logout_desc">مطئنی میخوای از اکانت فعلی خارج شی؟</string>
    <string name="you_have_no_posts">هیچ پستی نداری!</string>
    <string name="instagra_batch_manager">مدیریت دسته‌ای اینستاگرام</string>
    <string name="choose_one">یک گزینه را انتخاب کنید</string>
    <string name="account_is_not_verified">اکانت وریفای نشده!</string>
    <string name="view_story">نمایش استوری</string>
    <string name="view_highlight">نمایش هایلایت</string>
    <string name="view_live">نمایش لایو</string>
    <string name="live">لایو</string>
    <string name="download_count">دانلود (%1$s)</string>
    <string name="action_complete">با موفقیت انجام شد!</string>
    <string name="delete">حذف</string>
    <string name="most_liked">بیشترین لایک</string>
    <string name="most_commented">بیشترین کامنت</string>
    <string name="least_liked">کمترین لایک</string>
    <string name="least_commneted">کمترین کامنت</string>
    <string name="total_likes">مجموع لایک</string>
    <string name="total_comments">مجموع کامنت</string>
    <string name="average_likes">میانگین لایک</string>
    <string name="average_comments">میانگین کامنت</string>
    <string name="view_post">نمایش پست</string>
    <string name="like">لایک</string>
    <string name="copy_caption">کپی کردن کپشن</string>
    <string name="multiposts">پست‌های چندتایی</string>
    <string name="deleted">حذف شد</string>
    <string name="liked">لایک شد</string>
    <string name="downloading">در حال دانلود . . .</string>
    <string name="this_post_has_no_caption">این پست کپشن نداره</string>
    <string name="highlight">هایلایت</string>
    <string name="by_mutipost">بر اساس پست‌های چندتایی</string>
    <string name="saved_media_removed">پست‌های ذخیره شده حذف شد</string>
    <string name="user_media_saved">پست‌های کاربر ذخیره شد</string>
    <string name="posts_saved">پست‌ها ذخیره شدن!</string>
    <string name="posts_saved_desc">حالا دیگه هربار برگردی من پست‌های این کاربر یادم میمونه!\n اگر خواستی دوباره پست‌های جدید رو بگیری دکمه‌ی ذخیره رو خاموش کن و دوباره بیا.</string>
    <string name="got_it">گرفتم!</string>
    <string name="added_to_favorites">به علاقه‌مندی اضافه شد</string>
    <string name="unblock">آنبلاک</string>
    <string name="requested">درخواست داده شده</string>
    <string name="is_following_you">تو رو فالو میکنه</string>
    <string name="requested_to_follow_you">درخواست فالو داده</string>
    <string name="not_following_you">تو رو فالو نمیکنه</string>
    <string name="this_user_has_no_posts">این کاربر هیچ پستی نداره!</string>
    <string name="error_saving_video">خطا در ذخیره ویدئو</string>
    <string name="error_saving_image">خطا در ذخیره عکس</string>
    <string name="deleting_dot">در حال حذف :‌ </string>
    <string name="liking_dot">در حال لایک : </string>
    <string name="this_user_is_private">این کاربر پرایوته!</string>
    <string name="this_user_is_blocked">این کاربر بلاک شده!</string>
    <string name="story">استوری</string>
    <string name="send_mail_dot">ارسال ایمیل‌ . . .</string>
    <string name="there_are_no_email_clients_installed">هیچ برنامه‌ی ارسال ایمیلی پیدا نشد</string>
    <string name="sd_card_not_detected">کارت حافظه شناسایی نشد</string>
    <string name="next_downloads_will_be_saved_to_sd_card">دانلودهای بعدی توی کارت حافظه ذخیره میشن</string>
    <string name="next_downloads_will_be_saved_to_internal_storage">دانلودهای بعدی توی حافظه داخلی ذخیره میشن</string>
    <string name="permission_granted">دسترسی داده شد!</string>
    <string name="media_chart">نمودار پست‌ها</string>
    <string name="az">AZ</string>
    <string name="za">ZA</string>
</resources>